Создано с помощью Colaboratory

--- a/RuBERT_end.ipynb
+++ b/RuBERT_end.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "RuBERT_end.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM7GSDzjegHL45S+w+5GulG",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNgkHy/YvfCx7UgJxW/ueU4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,10 +47,13 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
+        "# Библиотека с предобученными трансформерами\n",
         "from transformers import AutoTokenizer, AutoModel\n",
         "\n",
+        "# Для разбиения train выборки\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
+        "# Библиотеки для классификации\n",
         "from sklearn.pipeline import make_pipeline\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.svm import SVC\n",
@@ -57,6 +61,7 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "import xgboost as xgb\n",
         "\n",
+        "# Для подсчета метрик\n",
         "from sklearn.metrics import f1_score, accuracy_score, roc_auc_score"
       ],
       "metadata": {
@@ -68,6 +73,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Константы\n",
+        "\n",
         "RANDOM_SEED = 42\n",
         "FILENAME = 'train.tsv'\n",
         "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
@@ -77,6 +84,15 @@
       },
       "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Считывание данных"
+      ],
+      "metadata": {
+        "id": "W8LWzVOTyqb8"
+      }
     },
     {
       "cell_type": "code",
@@ -104,6 +120,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Токенизация данных"
+      ],
+      "metadata": {
+        "id": "f5zO5KRey-qY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "tokenizer = AutoTokenizer.from_pretrained(\"sberbank-ai/sbert_large_nlu_ru\")\n",
@@ -121,8 +146,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Получение эмбеддингов предложений"
+      ],
+      "metadata": {
+        "id": "0J3TQSjczTM2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Скачивание предобученной модели\n",
         "model_RuBERT = AutoModel.from_pretrained(\"sberbank-ai/sbert_large_nlu_ru\").to(DEVICE)"
       ],
       "metadata": {
@@ -134,6 +169,9 @@
     {
       "cell_type": "code",
       "source": [
+        "''' Данная функция взята с https://huggingface.co '''\n",
+        "\n",
+        "\n",
         "#Mean Pooling - Take attention mask into account for correct averaging\n",
         "def mean_pooling(model_output, attention_mask):\n",
         "    token_embeddings = model_output[0] #First element of model_output contains all token embeddings\n",
@@ -151,18 +189,28 @@
     {
       "cell_type": "code",
       "source": [
-        "#Compute token embeddings\n",
         "with torch.no_grad():\n",
-        "    model_output = model_RuBERT(**tokenized_train)\n",
+        "    model_output_train = model_RuBERT(**tokenized_train)\n",
+        "with torch.no_grad():\n",
+        "    model_output_test = model_RuBERT(**tokenized_test)\n",
         "\n",
-        "#Perform pooling. In this case, mean pooling\n",
-        "train_embeddings = mean_pooling(model_output, tokenized_train['attention_mask'])"
+        "train_embeddings = mean_pooling(model_output_train, tokenized_train['attention_mask'])\n",
+        "test_embeddings = mean_pooling(model_output_test, tokenized_test['attention_mask'])"
       ],
       "metadata": {
         "id": "xjbntgbTjW-j"
       },
-      "execution_count": 26,
+      "execution_count": 46,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Построение моделей классификации"
+      ],
+      "metadata": {
+        "id": "MzyTg-CT0mcR"
+      }
     },
     {
       "cell_type": "code",
@@ -192,20 +240,13 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#Compute token embeddings\n",
-        "with torch.no_grad():\n",
-        "    model_output = model_RuBERT(**tokenized_test)\n",
-        "\n",
-        "#Perform pooling. In this case, mean pooling\n",
-        "test_embeddings = mean_pooling(model_output, tokenized_test['attention_mask'])"
+        "### Подсчет метрик"
       ],
       "metadata": {
-        "id": "2_9LrhIisqaV"
-      },
-      "execution_count": 30,
-      "outputs": []
+        "id": "dB_Jp2a-01TC"
+      }
     },
     {
       "cell_type": "code",
@@ -222,7 +263,7 @@
       "metadata": {
         "id": "5AwXttEzn3XB"
       },
-      "execution_count": 31,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -238,13 +279,13 @@
         "  print()"
       ],
       "metadata": {
-        "id": "y0JuY-ZdqoUN",
-        "outputId": "6a16e1a3-c578-42ff-993a-264d21d7aab9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y0JuY-ZdqoUN",
+        "outputId": "a3fde516-3e0b-46f4-80ce-3d4c7288fa74"
       },
-      "execution_count": 36,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,9 +297,9 @@
             "accuracy: 0.9071180555555556\n",
             "\n",
             "RandomForestClassifier:\n",
-            "f1_score: 0.8490077653149266\n",
-            "roc-auc: 0.8484438144640809\n",
-            "accuracy: 0.8480902777777778\n",
+            "f1_score: 0.860802732707088\n",
+            "roc-auc: 0.8586133059895046\n",
+            "accuracy: 0.8585069444444444\n",
             "\n",
             "LogisticRegeression:\n",
             "f1_score: 0.874251497005988\n",
