--- a/RuBERT_end.ipynb
+++ b/RuBERT_end.ipynb
@@ -6,7 +6,7 @@
       "name": "RuBERT_end.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNgkHy/YvfCx7UgJxW/ueU4",
+      "authorship_tag": "ABX9TyNihSa9J9zsHghfKlG5CExA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,21 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Vedernikov1/ML-DL.models/blob/main/RuBERT_end.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Обучение модели на основе эмбеддингов\n",
+        "\n",
+        "Необходимо каким то образом преоразовать текстовые данные, чтобы было возможно подать их на вход модели. Можно большим способом закодировать слова, либо символы, создать словарь токенов и заменить каждый токен на его номер. Но в таком случае наша модель не будет иметь информации о самих словах и что они значат в языке.\n",
+        "\n",
+        "Первым решением данной проблемы могут стать предобученные эмбеддинги для слов (например fasttext), тогда модель будет иметь представление о каждом отдельно взятом токене, но не будет знать ничего о слове в конкретном контексте входных данных. Можно было бы сверху на этих эмбеддингах обучить, например biderectional LSTM и таким образом получить представление предложений, но в данном блокноте рассматривается другой подход.\n",
+        "\n",
+        "С помощью предобученной модели - RuBERT, будут получены векторные представления предложений, которые уже хранят информацию о нем, а далее, поверх новых эмбеддингов, будут обучены модели классификации на исходную задачу."
+      ],
+      "metadata": {
+        "id": "lpjUs_YKkWd0"
+      }
     },
     {
       "cell_type": "code",
@@ -67,7 +82,7 @@
       "metadata": {
         "id": "1JEzr2NKeVlc"
       },
-      "execution_count": 34,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -76,13 +91,14 @@
         "# Константы\n",
         "\n",
         "RANDOM_SEED = 42\n",
-        "FILENAME = 'train.tsv'\n",
+        "TRAIN_FILENAME = 'train.tsv'\n",
+        "TEST_FILENAME = 'test.tsv'\n",
         "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
       ],
       "metadata": {
         "id": "bUDD-gBMgQ25"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -97,26 +113,26 @@
     {
       "cell_type": "code",
       "source": [
-        "def read_dataset(filename):\n",
-        "  df = pd.read_csv(\"train.tsv\", sep=\"\\t\")\n",
-        "  return df['title'], df['is_fake']"
+        "def read_tsv(filename):\n",
+        "  df = pd.read_csv(filename, sep=\"\\t\")\n",
+        "  return (df[i] for i in df) # Возвращаем итератор столбцов датафрейма"
       ],
       "metadata": {
         "id": "IkL1KjtXhc0l"
       },
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X, y = read_dataset(FILENAME)\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=RANDOM_SEED)"
+        "X, y = read_tsv(TRAIN_FILENAME) # Распаковываем итератор\n",
+        "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=RANDOM_SEED)"
       ],
       "metadata": {
         "id": "zx7fc9TmgfPR"
       },
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -131,18 +147,38 @@
     {
       "cell_type": "code",
       "source": [
-        "tokenizer = AutoTokenizer.from_pretrained(\"sberbank-ai/sbert_large_nlu_ru\")\n",
-        "\n",
-        "tokenized_train = tokenizer(list(X_train), padding=True, truncation=True, max_length=24, return_tensors='pt')\n",
-        "tokenized_train = tokenized_train.to(DEVICE)\n",
-        "\n",
-        "tokenized_test = tokenizer(list(X_test), padding=True, truncation=True, max_length=24, return_tensors='pt')\n",
-        "tokenized_test = tokenized_test.to(DEVICE)"
+        "def get_tokens(data):\n",
+        "  tokenized = tokenizer(list(data), padding=True, truncation=True, max_length=24, return_tensors='pt')\n",
+        "  tokenized = tokenized.to(DEVICE)\n",
+        "  return tokenized"
+      ],
+      "metadata": {
+        "id": "YSuDAaznocD0"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = AutoTokenizer.from_pretrained(\"sberbank-ai/sbert_large_nlu_ru\")"
+      ],
+      "metadata": {
+        "id": "g7VyerrVrmoh"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenized_train = get_tokens(X_train)\n",
+        "tokenized_val = get_tokens(X_val)"
       ],
       "metadata": {
         "id": "iq_CWurXhL4o"
       },
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -163,7 +199,7 @@
       "metadata": {
         "id": "lPDxLZ8QiVqz"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -183,24 +219,26 @@
       "metadata": {
         "id": "s7KyoK7hkXd3"
       },
-      "execution_count": 21,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "with torch.no_grad():\n",
-        "    model_output_train = model_RuBERT(**tokenized_train)\n",
-        "with torch.no_grad():\n",
-        "    model_output_test = model_RuBERT(**tokenized_test)\n",
+        "def get_sentence_embeddings(tokenized):\n",
+        "  with torch.no_grad():\n",
+        "    model_output = model_RuBERT(**tokenized)\n",
+        "  \n",
+        "  return mean_pooling(model_output, tokenized['attention_mask'])\n",
         "\n",
-        "train_embeddings = mean_pooling(model_output_train, tokenized_train['attention_mask'])\n",
-        "test_embeddings = mean_pooling(model_output_test, tokenized_test['attention_mask'])"
+        "\n",
+        "train_embeddings = get_sentence_embeddings(tokenized_train)\n",
+        "val_embeddings = get_sentence_embeddings(tokenized_val)"
       ],
       "metadata": {
-        "id": "xjbntgbTjW-j"
+        "id": "ovjlQEegq6l5"
       },
-      "execution_count": 46,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -263,15 +301,15 @@
       "metadata": {
         "id": "5AwXttEzn3XB"
       },
-      "execution_count": 43,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "for model_name, class_model in classification_models.items():\n",
-        "  y_pred = np.array(class_model.predict(test_embeddings.cpu()))\n",
-        "  metrics = compute_metrics(y_test, y_pred)\n",
+        "  y_pred = np.array(class_model.predict(val_embeddings.cpu()))\n",
+        "  metrics = compute_metrics(y_val, y_pred)\n",
         "\n",
         "  print(f'{model_name}:')\n",
         "  for score_name, score in metrics.items():\n",
@@ -283,9 +321,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y0JuY-ZdqoUN",
-        "outputId": "a3fde516-3e0b-46f4-80ce-3d4c7288fa74"
+        "outputId": "19043076-75fb-4bf3-a700-5b99e5a92838"
       },
-      "execution_count": 44,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,9 +335,9 @@
             "accuracy: 0.9071180555555556\n",
             "\n",
             "RandomForestClassifier:\n",
-            "f1_score: 0.860802732707088\n",
-            "roc-auc: 0.8586133059895046\n",
-            "accuracy: 0.8585069444444444\n",
+            "f1_score: 0.8568980291345331\n",
+            "roc-auc: 0.8552234754810302\n",
+            "accuracy: 0.8550347222222222\n",
             "\n",
             "LogisticRegeression:\n",
             "f1_score: 0.874251497005988\n",
@@ -314,6 +352,95 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Анализ\n",
+        "\n",
+        "Наилучший результат показывает SVM, в районе 0.9 - 0.91 по каждой из трех метрик, поэтому именно этот тип модели классификации мы будем использовать для разметки тестовых данных."
+      ],
+      "metadata": {
+        "id": "PfbzqWqgnAEG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Обучение полной модели\n",
+        "\n",
+        "В предыдущих разделах мы разделяли данную нам тренировочную выборку на непосредственно train и validation, чтобы выбрать модель классификации и получить значения метрик.\n",
+        "\n",
+        "Но основная задача стоит в разметке данных из файла 'test.tsv', поэтому нет смысла обучать модель лишь на часте тренировочных данных"
+      ],
+      "metadata": {
+        "id": "XLeujgaSnfGB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# X, y - полные данные, которые мы сплитовали\n",
+        "\n",
+        "tokenized_data = get_tokens(X)\n",
+        "data_embeddings = get_sentence_embeddings(tokenized_data)\n",
+        "\n",
+        "classificator = make_pipeline(StandardScaler(), SVC(kernel='rbf', gamma='scale'))\n",
+        "classificator.fit(data_embeddings.cpu(), y)"
+      ],
+      "metadata": {
+        "id": "6FJSKBAktGbo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_test, _ = read_tsv(TEST_FILENAME) # y - не нужен, так как это неразмеченные данные\n",
+        "\n",
+        "tokenized_test = get_tokens(X_test)\n",
+        "test_embeddings = get_sentence_embeddings(tokenized_test)\n",
+        "\n",
+        "y_predictions = classificator.predict(test_embeddings.cpu())"
+      ],
+      "metadata": {
+        "id": "_v6LzHptvkpL"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Запись данных в файл"
+      ],
+      "metadata": {
+        "id": "vpUG3-zU9HgE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = pd.DataFrame({'title': X_test, 'is_fake': y_predictions})\n",
+        "predictions.set_index('title', inplace=True)"
+      ],
+      "metadata": {
+        "id": "_Nor4XAq1eM7"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions.to_csv('predictions.tsv', sep=\"\\t\")"
+      ],
+      "metadata": {
+        "id": "ArVtnPNj4tdB"
+      },
+      "execution_count": 63,
+      "outputs": []
     }
   ]
 }
