Создано с помощью Colaboratory

--- a/DomAd.ipynb
+++ b/DomAd.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DomAd.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHY5nMFcn+1SrxpMEj64wA",
+      "authorship_tag": "ABX9TyOZYKpQvTF+S9b4oOhpy3L3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +100,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Создание датасета для классификации"
+        "### Создание датасета для классификации\n",
+        "\n",
+        "Нам не нужны метки классов, так как мы хотим определить как отличаются сами семлы наборов"
       ],
       "metadata": {
         "id": "i8H-6SFLaput"
@@ -109,21 +111,21 @@
     {
       "cell_type": "code",
       "source": [
-        "def read_dataset(filename):\n",
+        "def read_titles(filename):\n",
         "  df = pd.read_csv(filename, sep=\"\\t\")\n",
         "  return np.array(df['title'])"
       ],
       "metadata": {
         "id": "T2K_-ZzgD4uV"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X_train = read_dataset(TRAIN_FILENAME)[:1000] # len = 1000 Чтобы сделать классы сбалансированными\n",
-        "X_test = read_dataset(TEST_FILENAME) # len = 1000\n",
+        "X_train = read_titles(TRAIN_FILENAME)[:1000] # len = 1000 Чтобы сделать классы сбалансированными\n",
+        "X_test = read_titles(TEST_FILENAME) # len = 1000\n",
         "\n",
         "y_train = np.ones(len(X_train)) # ones - первый класс\n",
         "y_test = np.zeros(len(X_test)) # zeros - второй класс\n",
@@ -141,12 +143,12 @@
       "cell_type": "code",
       "source": [
         "# Разделим полученный датасет на train и test и перемешаем\n",
-        "X_class_train, X_class_test, y_class_train, y_class_test = train_test_split(X_data, y_data, test_size=0.2, random_state=42, shuffle=True)"
+        "X_class_train, X_class_val, y_class_train, y_class_val = train_test_split(X_data, y_data, test_size=0.2, random_state=42, shuffle=True)"
       ],
       "metadata": {
         "id": "ESyoq6-rL4lH"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -161,18 +163,38 @@
     {
       "cell_type": "code",
       "source": [
-        "tokenizer = AutoTokenizer.from_pretrained(\"sberbank-ai/sbert_large_nlu_ru\")\n",
-        "\n",
-        "tokenized_train = tokenizer(list(X_class_train), padding=True, truncation=True, max_length=24, return_tensors='pt')\n",
-        "tokenized_train = tokenized_train.to(DEVICE)\n",
-        "\n",
-        "tokenized_test = tokenizer(list(X_class_test), padding=True, truncation=True, max_length=24, return_tensors='pt')\n",
-        "tokenized_test = tokenized_test.to(DEVICE)"
+        "def get_tokens(data):\n",
+        "  tokenized = tokenizer(list(data), padding=True, truncation=True, max_length=24, return_tensors='pt')\n",
+        "  tokenized = tokenized.to(DEVICE)\n",
+        "  return tokenized"
       ],
       "metadata": {
-        "id": "RRAjbvGiPrM2"
+        "id": "gpHkjV4XyS2f"
       },
-      "execution_count": null,
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = AutoTokenizer.from_pretrained(\"sberbank-ai/sbert_large_nlu_ru\")"
+      ],
+      "metadata": {
+        "id": "--6jv5sSyWmm"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenized_train = get_tokens(X_class_train)\n",
+        "tokenized_val = get_tokens(X_class_val)"
+      ],
+      "metadata": {
+        "id": "hKnppK8aybm9"
+      },
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -204,24 +226,26 @@
       "metadata": {
         "id": "56ihXzD-ST0d"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "with torch.no_grad():\n",
-        "    model_output_train = model_RuBERT(**tokenized_train)\n",
-        "with torch.no_grad():\n",
-        "    model_output_test = model_RuBERT(**tokenized_test)\n",
+        "def get_sentence_embeddings(tokenized):\n",
+        "  with torch.no_grad():\n",
+        "    model_output = model_RuBERT(**tokenized)\n",
+        "  \n",
+        "  return mean_pooling(model_output, tokenized['attention_mask'])\n",
         "\n",
-        "train_embeddings = mean_pooling(model_output_train, tokenized_train['attention_mask'])\n",
-        "test_embeddings = mean_pooling(model_output_test, tokenized_test['attention_mask'])"
+        "\n",
+        "train_embeddings = get_sentence_embeddings(tokenized_train)\n",
+        "val_embeddings = get_sentence_embeddings(tokenized_val)"
       ],
       "metadata": {
         "id": "z2WrOYYeSUg3"
       },
-      "execution_count": 13,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -284,15 +308,15 @@
       "metadata": {
         "id": "wdDh7NpkScVZ"
       },
-      "execution_count": 16,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "for model_name, class_model in classification_models.items():\n",
-        "  y_pred = np.array(class_model.predict(test_embeddings.cpu()))\n",
-        "  metrics = compute_metrics(y_class_test, y_pred)\n",
+        "  y_pred = np.array(class_model.predict(val_embeddings.cpu()))\n",
+        "  metrics = compute_metrics(y_class_val, y_pred)\n",
         "\n",
         "  print(f'{model_name}:')\n",
         "  for score_name, score in metrics.items():\n",
@@ -304,9 +328,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y1Qsr8joSecU",
-        "outputId": "0acc5de4-bb19-4027-8e1d-9c08d42d6342"
+        "outputId": "f8266f91-f823-4852-8545-ded11922edcf"
       },
-      "execution_count": 17,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,9 +342,9 @@
             "accuracy: 0.4875\n",
             "\n",
             "RandomForestClassifier:\n",
-            "f1_score: 0.47120418848167533\n",
-            "roc-auc: 0.4947873696842421\n",
-            "accuracy: 0.495\n",
+            "f1_score: 0.4673913043478261\n",
+            "roc-auc: 0.5096127403185079\n",
+            "accuracy: 0.51\n",
             "\n",
             "LogisticRegeression:\n",
             "f1_score: 0.4421052631578947\n",
